update order service và product service
thêm 1 số thuộc tính theo cơ sở dữ liệu