@@ -11,133 +11,106 @@ import vn.cnpm.order_service.service.OrderService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class OrderServiceImpl implements OrderService {
-    private final ProductClient productClient;
     private final OrderRepository orderRepository;
     private final PaymentClient paymentClient;
+    private final ProductClient productClient;
 
     @Override
     @Transactional
     public OrderResponse createOrder(OrderRequest request) {
-        final double[] total = {0.0};
-        List<OrderItem> items = request.getItems().stream().map(i -> {
-            ProductDTO product = productClient.getProductById(i.getProductId());
-            if (product.getStock() < i.getQuantity()) {
-                throw new RuntimeException("Product " + product.getName() + " out of stock");
-            }
-
-            total[0] += product.getPrice() * i.getQuantity();
-
-            // giảm tồn kho
-            productClient.reduceStock(product.getId(), i.getQuantity());
-
-            return OrderItem.builder()
-                    .productId(product.getId())
-                    .quantity(i.getQuantity())
-                    .price(product.getPrice())
-                    .build();
-        }).toList();
+        // Tạo order trước (không có items)
         Order order = Order.builder()
                 .userId(request.getUserId())
-                .totalPrice(total[0])
-                .status(OrderStatus.PAYMENT_PENDING)
-                .orderItems(items)
+                .status(OrderStatus.NEW)
                 .build();
-        Order saved = orderRepository.save(order);
-        PaymentDTO paymentReq = new PaymentDTO();
-        paymentReq.setOrderId(order.getId());
-        paymentReq.setAmount(total[0]);
 
-        PaymentDTO paymentRes = paymentClient.createPayment(paymentReq);
+        // Tạo order items và fetch thông tin sản phẩm
+        double totalPrice = 0.0;
+        List<OrderItem> items = new ArrayList<>();
 
+        for (OrderRequest.OrderItemRequest itemRequest : request.getItems()) {
+            // Lấy thông tin sản phẩm từ product service
+            ProductDTO product = productClient.getProductById(itemRequest.getProductId());
 
-        if ("SUCCESS".equalsIgnoreCase(paymentRes.getStatus())) {
-            order.setStatus(OrderStatus.PAID);
-        } else {
-            order.setStatus(OrderStatus.FAILED);
+            // Tính giá cho item này
+            double itemPrice = product.getPrice() * itemRequest.getQuantity();
+            totalPrice += itemPrice;
+
+            // Tạo order item với đầy đủ thông tin
+            OrderItem item = OrderItem.builder()
+                    .productId(itemRequest.getProductId())
+                    .productName(product.getName())  // Lưu tên sản phẩm
+                    .quantity(itemRequest.getQuantity())
+                    .price(product.getPrice())  // Lưu giá đơn vị
+                    .order(order)
+                    .build();
+            items.add(item);
         }
-        orderRepository.save(order);
 
+        // Set tổng giá và items vào order
+        order.setTotalPrice(totalPrice);
+        order.setOrderItems(items);
 
+        // Lưu order vào database (cascade sẽ tự động lưu items)
+        Order saved = orderRepository.save(order);
+
+        // Map sang response
         return OrderResponse.builder()
-                .id(order.getId())
-                .status(order.getStatus())
-                .totalPrice(order.getTotalPrice())
-                .items(items.stream()
+                .id(saved.getId())
+                .userId(saved.getUserId())
+                .status(saved.getStatus())
+                .totalPrice(saved.getTotalPrice())
+                .createdAt(saved.getCreatedAt())
+                .updatedAt(saved.getUpdatedAt())
+                .orderItems(saved.getOrderItems().stream()
                         .map(it -> OrderResponse.OrderItemResponse.builder()
                                 .productId(it.getProductId())
+                                .productName(it.getProductName())  // Thêm tên sản phẩm
                                 .quantity(it.getQuantity())
                                 .price(it.getPrice())
                                 .build())
-                        .toList())
+                        .collect(Collectors.toList()))
                 .build();
-
-//        return mapToDto(saved);
     }
 
-//    @Override
-//    public List<OrderResponse> getAllOrders() {
-//        return orderRepository.findAll()
-//                .stream()
-//                .map(this::mapToDto)
-//                .collect(Collectors.toList());
-//    }
-//
-//    @Override
-//    public OrderResponse getOrderById(Long id) {
-//        Order o = orderRepository.findById(id)
-//                .orElseThrow(() -> new RuntimeException("Order not found: " + id));
-//        return mapToDto(o);
-//    }
+    @Override
+    public List<OrderResponse> getAllOrders() {
+        return orderRepository.findAll()
+                .stream()
+                .map(this::mapToDto)
+                .collect(Collectors.toList());
+    }
 
-//    private OrderResponse mapToDto(Order o) {
-//        return OrderResponse.builder()
-//                .id(o.getId())
-//                .userId(o.getUserId())
-//                .product(o.getProduct())
-//                .price(o.getPrice())
-//                .status(o.getStatus())
-//                .createdAt(o.getCreatedAt())
-//                .updatedAt(o.getUpdatedAt())
-//                .build();
-//    }
-@Override
-public OrderResponse getOrder(Long id) {
-    Order order = orderRepository.findById(id)
-            .orElseThrow(() -> new RuntimeException("Order not found"));
-    return OrderResponse.builder()
-            .id(order.getId())
-            .status(order.getStatus())
-            .totalPrice(order.getTotalPrice())
-            .items(order.getOrderItems().stream()
-                    .map(it -> OrderResponse.OrderItemResponse.builder()
-                            .productId(it.getProductId())
-                            .quantity(it.getQuantity())
-                            .price(it.getPrice())
-                            .build())
-                    .toList())
-            .build();
-}
-public List<OrderResponse> getAllOrders(){
-    return orderRepository.findAll()
-            .stream()
-            .map(order -> OrderResponse.builder()
-                    .id(order.getId())
-                    .status(order.getStatus())  // nếu bạn dùng Enum
-                    .totalPrice(order.getTotalPrice())
-                    .items(order.getOrderItems().stream()
-                            .map(it -> OrderResponse.OrderItemResponse.builder()
-                                    .productId(it.getProductId())
-                                    .quantity(it.getQuantity())
-                                    .price(it.getPrice())
-                                    .build())
-                            .toList())
-                    .build())
-            .toList();
-}
+    @Override
+    public OrderResponse getOrder(Long id) {
+        Order o = orderRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Order not found: " + id));
+        return mapToDto(o);
+    }
+
+    private OrderResponse mapToDto(Order o) {
+        return OrderResponse.builder()
+                .id(o.getId())
+                .userId(o.getUserId())
+                .status(o.getStatus())
+                .totalPrice(o.getTotalPrice())
+                .createdAt(o.getCreatedAt())
+                .updatedAt(o.getUpdatedAt())
+                .orderItems(o.getOrderItems() != null ? o.getOrderItems().stream()
+                        .map(it -> OrderResponse.OrderItemResponse.builder()
+                                .productId(it.getProductId())
+                                .productName(it.getProductName())  // Thêm tên sản phẩm
+                                .quantity(it.getQuantity())
+                                .price(it.getPrice())
+                                .build())
+                        .collect(Collectors.toList()) : List.of())
+                .build();
+    }
 }
